Fixed someof my pages problems with the text it is now more readable and a new color scheme

--- a/ryanStyle.css
+++ b/ryanStyle.css
@@ -1,10 +1,16 @@
+@font-face{
+   font-family: spaceText;
+   src: url("Azonix-1VB0.otf");
+}
+
 html{
-    height: 960px;
+    height: 1560px;
     width: 100%;
     margin: 0px;
     padding: 0px;
     border: 0px;
-    
+    background: linear-gradient(#24c99d, #030303) no-repeat;
+    font-family: spaceText, sans-serif;
 }
 
 body{
@@ -19,7 +25,7 @@ body{
    border: none;
    width: 100%;
    height: 550px;
-   background: linear-gradient(coral, seagreen);
+   
    
 }
 
@@ -29,22 +35,23 @@ nav#themes ul{
 nav#themes a{
    float: right;
    text-decoration: none;
-   color: #49418c;
+   color: #888e91;
    letter-spacing: 2px;
    padding-right: 15px;
 }
 nav#themes a:hover{
-   color: seagreen;
+   color: rgb(214, 143, 12);
    text-align: center;
 }
 
 button{
   float: left;
-  color:gold;
+  color: #030303;
   font-size: 20px;
   font-weight: bold;
-  border-radius: 10px;
-  border: 2px solid firebrick;
+  background: transparent;
+  border-radius: 50px;
+  border: 2px solid #888e91;
   margin: 5px;
   padding: 10px;
   width: 100px;
@@ -52,98 +59,114 @@ button{
 }
 
 button:hover{
-  color:  seagre;
-  background: rgb(214, 143, 12);
-  font-weight: 5px;
-  transition: background 1s;
-}
-
-div.col-1-4{
-   width: 25%;
-   float: left;
-}
-div.col-1-2{ 
-   width: 50%;
-   float: left;
-}
-
-h1#header{
-   font-size: 40px;
-   margin-top: 25px;
-   margin-left: 0px;
-   position: relative;
-   text-align: left;
-   color: rgb(214, 143, 12);
-}
-nav#themes{
-   position: relative;
-   margin-bottom: 50px;
-}
-nav#themes > ul{
-   padding: 0px;
-}
-nav#themes li {
-   float: right;
-   text-align: center;
-   margin-bottom: 10px; 
-   padding: 0px 20px;
-}
- 
-img#car{
-    filter: drop-shadow(black 5px 5px 10px);
-    width: 4in;
-    height: 4in;
-    margin-right: 0px;
-}
-
-/* grid layout */
-.item1{grid-area: one;}
-.item2{grid-area: two;}
-.item3{grid-area: three;
-   border: 2px solid rgb(214, 143, 12);
-}
-.item4{grid-area: four;}
-
-.container{
-    display: grid;
-    height: 80%;
-    grid-template-rows: 1fr 3fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
-    'one one two three'
-    'four four four three';
-    grid-column-gap: 15px;
-    grid-row-gap: 20px; 
-    padding: 10px;
-    background: white;
-}
-
-.container > div {
-    background: rgba(124, 124, 124, 0.2);
-    padding: 0px 20px;
-    font-size: 30px;
-    border-radius: 15px;
- }
-
-h1{
-   margin-top: 5px;
-   margin-bottom: 0px;
-   text-align: center;
-   color: rgb(214, 143, 12);
-}
-
-p{
-    margin-left: 10px;
-}
-
- footer{
-   height: 5%;
-   background: seagreen;
- }
-
- div.header{
-     height: 20%;
- }
- footer{
-     height: 100%;
- }
+    color:  #24c99d;
+    background: #030303;
+    font-weight: 5px;
+  }
+  
+  div.col-1-4{
+     width: 25%;
+     float: left;
+  }
+  div.col-1-2{ 
+     width: 50%;
+     float: left;
+  }
+  
+  img{
+     margin-right: 0px;
+  }
+  
+  h1#header{
+     font-size: 45px;
+     margin-top: 25px;
+     margin-left: 0px;
+     position: relative;
+     text-align: left;
+     color: black;
+  }
+  nav#themes{
+     position: relative;
+     margin-bottom: 50px;
+  }
+  nav#themes > ul{
+     padding: 0px;
+  }
+  nav#themes li {
+     float: right;
+     text-align: center;
+     margin-bottom: 10px; 
+     padding: 0px 20px;
+  }
+  
+  /* grid layout */
+  .item1{grid-area: one;}
+  .item2{grid-area: two;}
+  .item3{grid-area: three;
+     border: 2px solid #24c99d;
+  }
+  .item4{grid-area: four;}
+  
+  .container{
+      display: grid;
+      height: 55%;
+      grid-template-rows: 1fr 3fr;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas: 
+      'one one two three'
+      'four four four three';
+      grid-column-gap: 15px;
+      grid-row-gap: 20px; 
+      padding: 10px;
+      background: #030303;
+  }
+  
+  .container > div {
+      background: rgba(124, 124, 124, 0.2);
+      padding: 0px 20px;
+      font-size: 30px;
+      border-radius: 15px;
+   }
+  
+  h1{
+     margin-top: 5px;
+     margin-bottom: 0px;
+     text-align: center;
+     color: #24c99d;
+  }
+   
+  nav#pages ul{
+     list-style: none;
+  }
+  nav#pages li{
+     margin: 15px;
+  }
+  nav#pages a{
+     text-decoration: none;
+     font-size: 25px;
+     padding-right: 30px;
+     color: #888e91;
+  }
+  
+  nav#pages a:hover{
+     color: #24c99d;
+  }
+  
+  p{
+      font-size: 30px;
+      color: #888e91;
+  }
+  
+  image{
+      color: #888e91;
+      border: 2px solid #888e91;
+  }
+  
+  h2{
+      color: #888e91;
+  }
+  
+  footer{
+     height: 5%;
+     background: #06030a;
+   }
